// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinearGenomeView /> renders one track, one region 1`] = `
<div
  style="position: relative;"
>
  <div>
    <div
      style="position: relative;"
    >
      <div
        class="makeStyles-rubberBandControl"
        role="presentation"
      >
        <div
          class="makeStyles-scaleBar"
        >
          <div
            class="makeStyles-scaleBarVisibleRegion"
            style="width: 800px; left: 0px;"
          />
          <div
            class="makeStyles-scaleBarContig"
            style="width: 0px; left: 0px; background-color: rgb(153, 153, 153);"
          />
          <div
            class="makeStyles-scaleBarContig makeStyles-scaleBarContigForward"
            style="left: 0px; width: 800px; border-color: rgb(153, 102, 0);"
          >
            <p
              class="MuiTypography-root makeStyles-scaleBarRefName MuiTypography-body1"
              style="color: rgb(153, 102, 0);"
            >
              ctgA
            </p>
            <p
              class="MuiTypography-root makeStyles-scaleBarLabel MuiTypography-body2"
              style="left: 160px; pointer-events: none; color: rgb(153, 102, 0);"
            >
              20
            </p>
            <p
              class="MuiTypography-root makeStyles-scaleBarLabel MuiTypography-body2"
              style="left: 320px; pointer-events: none; color: rgb(153, 102, 0);"
            >
              40
            </p>
            <p
              class="MuiTypography-root makeStyles-scaleBarLabel MuiTypography-body2"
              style="left: 480px; pointer-events: none; color: rgb(153, 102, 0);"
            >
              60
            </p>
            <p
              class="MuiTypography-root makeStyles-scaleBarLabel MuiTypography-body2"
              style="left: 640px; pointer-events: none; color: rgb(153, 102, 0);"
            >
              80
            </p>
            <p
              class="MuiTypography-root makeStyles-scaleBarLabel MuiTypography-body2"
              style="left: 800px; pointer-events: none; color: rgb(153, 102, 0);"
            >
              100
            </p>
          </div>
          <div
            class="makeStyles-scaleBarContig"
            style="width: 0px; left: 800px; background-color: rgb(153, 153, 153);"
          />
        </div>
      </div>
    </div>
    <div
      class="makeStyles-overview"
    >
      <svg
        class="makeStyles-overviewSvg"
        height="48"
        width="100%"
      >
        <polygon
          fill="rgba(121, 134, 203, 0.3)"
          points="0,48,101,48,800,0,0,0"
          stroke="rgba(121, 134, 203, 0.8)"
        />
      </svg>
      <div
        class="makeStyles-headerBar"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-toggleButton MuiButton-textSecondary"
          tabindex="0"
          title="Open track selector"
          type="button"
          value="track_select"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-buttonSpacer"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 19v-2H8v2h13m0-6v-2H8v2h13M8 7h13V5H8v2M4 5v2h2V5H4M3 5a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V5m1 6v2h2v-2H4m-1 0a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1v-2m1 6v2h2v-2H4m-1 0a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1v-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="makeStyles-spacer"
        />
        <div
          class="MuiFormGroup-root makeStyles-headerForm MuiFormGroup-row"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-panButton"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-panButton"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <div
            aria-expanded="false"
            class="MuiAutocomplete-root"
            data-testid="autocomplete"
            role="combobox"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-headerRefName MuiFormControl-fullWidth"
              style="margin: 7px; min-width: 175px;"
            >
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                style="padding: 0px; height: 32px; background: rgba(255, 255, 255, 0.8);"
              >
                <input
                  aria-autocomplete="list"
                  aria-invalid="false"
                  autocapitalize="none"
                  autocomplete="off"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="refNameAutocomplete-lgv"
                  placeholder="Search for location"
                  spellcheck="false"
                  type="text"
                  value="ctgA:1..100"
                />
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  style="margin-right: 7px;"
                  title="Search for features or navigate to a location using syntax \\"chr1:1-100\\" or \\"chr1:1..100\\""
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAutocomplete-endAdornment"
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <p
          class="MuiTypography-root makeStyles-bp MuiTypography-body2 MuiTypography-colorTextSecondary"
        >
          100 bp
        </p>
        <div
          class="makeStyles-container"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-disabled MuiButtonBase-disabled"
            data-testid="zoom_out"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14zM7 9h5v1H7z"
                />
              </svg>
            </span>
          </button>
          <span
            class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider"
          >
            <span
              class="MuiSlider-rail"
            />
            <span
              class="MuiSlider-track"
              style="left: 0%; width: 0%;"
            />
            <input
              type="hidden"
              value="284.799690655495"
            />
            <span
              aria-orientation="horizontal"
              aria-valuemax="564.3856189774724"
              aria-valuemin="284.799690655495"
              aria-valuenow="284.799690655495"
              class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
              data-index="0"
              role="slider"
              style="left: 0%;"
              tabindex="0"
            />
          </span>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            data-testid="zoom_in"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                />
                <path
                  d="M12 10h-2v2H9v-2H7V9h2V7h1v2h2v1z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-spacer"
        />
      </div>
    </div>
  </div>
  <div
    class="makeStyles-tracksContainer"
    role="presentation"
  >
    <div
      class="makeStyles-verticalGuidesZoomContainer"
    >
      <div
        class="makeStyles-verticalGuidesContainer"
        style="left: -1024px; width: 2148px;"
      >
        <div
          class="makeStyles-boundaryPaddingBlock"
          style="width: 1024px;"
        />
        <div
          class="makeStyles-contentBlock"
          style="width: 100px;"
        >
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: -1px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 19px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 39px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 59px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 79px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 99px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 119px;"
          />
        </div>
        <div
          class="makeStyles-boundaryPaddingBlock"
          style="width: 1024px;"
        />
      </div>
    </div>
    <div
      class="makeStyles-rubberBandControl"
      data-testid="rubberBand_controls"
      role="presentation"
    >
      <div
        class="MuiPaper-root makeStyles-scaleBarContainer MuiPaper-outlined MuiPaper-rounded"
        data-resizer="true"
        style="height: 17px; box-sizing: border-box;"
      >
        <div
          class="makeStyles-scaleBarZoomContainer"
        >
          <div
            class="makeStyles-scaleBar"
            style="left: -1025px; width: 2148px; height: 17px; box-sizing: border-box;"
          >
            <div
              class="makeStyles-boundaryPaddingBlock"
              style="background: none; width: 1024px;"
            />
            <div
              class="makeStyles-contentBlock"
              style="width: 100px;"
            >
              <div
                class="makeStyles-tick"
                style="left: -1px;"
              >
                <p
                  class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
                >
                  0
                </p>
              </div>
            </div>
            <div
              class="makeStyles-boundaryPaddingBlock"
              style="background: none; width: 1024px;"
            />
          </div>
        </div>
        <p
          class="MuiTypography-root makeStyles-refLabel MuiTypography-body1"
          data-testid="refLabel-ctgA"
          style="left: -1px; padding-left: 1px;"
        >
          ctgA
        </p>
      </div>
    </div>
    <div
      class="makeStyles-spacer"
    />
    <div
      class="makeStyles-root"
    >
      <div
        class="MuiPaper-root makeStyles-trackLabel makeStyles-trackLabelOverlap makeStyles-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <span
          class="makeStyles-dragHandle"
          data-testid="dragHandle-lgv-testConfig"
          draggable="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-dragHandleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          title="close this track"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
        >
          Foo Track
        </span>
        <button
          aria-controls="simple-menu"
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary MuiIconButton-disabled MuiButtonBase-disabled"
          data-testid="track_menu_icon"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="MuiPaper-root makeStyles-trackRenderingContainer MuiPaper-outlined MuiPaper-rounded"
        data-testid="trackRenderingContainer-lgv-testConfig"
        role="presentation"
        style="height: 100px;"
      >
        <div
          class="makeStyles-renderingComponentContainer"
          style="transform: scaleX(1);"
        >
          <div
            class="makeStyles-display"
            data-testid="display-testConfig-LinearBareDisplay"
            role="presentation"
          >
            <div
              class="makeStyles-linearBlocks"
              data-testid="Blockset"
              style="left: -1024px;"
            >
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 1024px;"
              />
              <div
                class="makeStyles-contentBlock"
                style="width: 100px;"
              >
                <div
                  style="position: relative;"
                >
                  <svg
                    class="SvgFeatureRendering"
                    height="0px"
                    style="display: block;"
                    width="100px"
                  />
                </div>
              </div>
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 1024px;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-overlay"
        style="height: 100px;"
      />
      <div
        class="makeStyles-horizontalHandle makeStyles-resizeHandle"
        data-resizer="true"
        role="presentation"
      />
    </div>
  </div>
</div>
`;

exports[`<LinearGenomeView /> renders setup wizard 1`] = `
<div>
  <div
    class="MuiContainer-root makeStyles-importFormContainer MuiContainer-maxWidthLg"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-importFormEntry MuiFormControl-marginNormal"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
            data-shrink="true"
          >
            Assembly
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
              role="button"
              tabindex="0"
            >
              volMyt1
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="0"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Assembly
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
          >
            Select assembly to view
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          aria-expanded="false"
          class="MuiAutocomplete-root"
          data-testid="autocomplete"
          role="combobox"
        >
          <div
            class="MuiFormControl-root MuiTextField-root makeStyles-importFormEntry MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
            >
              <input
                aria-autocomplete="list"
                aria-describedby="refNameAutocomplete-lgv-helper-text"
                aria-invalid="false"
                autocapitalize="none"
                autocomplete="off"
                class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                id="refNameAutocomplete-lgv"
                placeholder="Search for location"
                spellcheck="false"
                type="text"
                value="ctgA"
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                style="margin-right: 7px;"
                title="Search for features or navigate to a location using syntax \\"chr1:1-100\\" or \\"chr1:1..100\\""
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                  />
                </svg>
              </div>
              <div
                class="MuiAutocomplete-endAdornment"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="refNameAutocomplete-lgv-helper-text"
            >
              Enter a sequence or locstring
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Open
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button MuiButton-containedSecondary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Show all regions in assembly
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LinearGenomeView /> renders two tracks, two regions 1`] = `
<div
  style="position: relative;"
>
  <div>
    <div
      style="position: relative;"
    >
      <div
        class="makeStyles-rubberBandControl"
        role="presentation"
      >
        <div
          class="makeStyles-scaleBar"
        >
          <div
            class="makeStyles-scaleBarVisibleRegion"
            style="width: 580px; left: 0px;"
          />
          <div
            class="makeStyles-scaleBarContig"
            style="width: 0px; left: 0px; background-color: rgb(153, 153, 153);"
          />
          <div
            class="makeStyles-scaleBarContig makeStyles-scaleBarContigForward"
            style="left: 0px; width: 72.72727272727273px; border-color: rgb(153, 102, 0);"
          >
            <p
              class="MuiTypography-root makeStyles-scaleBarRefName MuiTypography-body1"
              style="color: rgb(153, 102, 0);"
            >
              ctgA
            </p>
          </div>
          <div
            class="makeStyles-scaleBarContig"
            style="width: 0px; left: 72.72727272727273px; background-color: rgb(153, 153, 153);"
          />
          <div
            class="makeStyles-scaleBarContig makeStyles-scaleBarContigForward"
            style="left: 72.72727272727273px; width: 727.2727272727273px;"
          >
            <p
              class="MuiTypography-root makeStyles-scaleBarRefName MuiTypography-body1"
            >
              ctgB
            </p>
            <p
              class="MuiTypography-root makeStyles-scaleBarLabel MuiTypography-body2"
              style="left: 145.0909090909091px; pointer-events: none;"
            >
              1,200
            </p>
            <p
              class="MuiTypography-root makeStyles-scaleBarLabel MuiTypography-body2"
              style="left: 290.1818181818182px; pointer-events: none;"
            >
              1,400
            </p>
            <p
              class="MuiTypography-root makeStyles-scaleBarLabel MuiTypography-body2"
              style="left: 435.27272727272725px; pointer-events: none;"
            >
              1,600
            </p>
            <p
              class="MuiTypography-root makeStyles-scaleBarLabel MuiTypography-body2"
              style="left: 580.3636363636364px; pointer-events: none;"
            >
              1,800
            </p>
            <p
              class="MuiTypography-root makeStyles-scaleBarLabel MuiTypography-body2"
              style="left: 725.4545454545454px; pointer-events: none;"
            >
              2,000
            </p>
          </div>
          <div
            class="makeStyles-scaleBarContig"
            style="width: 0px; left: 800px; background-color: rgb(153, 153, 153);"
          />
        </div>
      </div>
    </div>
    <div
      class="makeStyles-overview"
    >
      <svg
        class="makeStyles-overviewSvg"
        height="48"
        width="100%"
      >
        <polygon
          fill="rgba(121, 134, 203, 0.3)"
          points="0,48,802,48,580,0,0,0"
          stroke="rgba(121, 134, 203, 0.8)"
        />
      </svg>
      <div
        class="makeStyles-headerBar"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-toggleButton MuiButton-textSecondary"
          tabindex="0"
          title="Open track selector"
          type="button"
          value="track_select"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-buttonSpacer"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 19v-2H8v2h13m0-6v-2H8v2h13M8 7h13V5H8v2M4 5v2h2V5H4M3 5a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V5m1 6v2h2v-2H4m-1 0a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1v-2m1 6v2h2v-2H4m-1 0a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1v-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="makeStyles-spacer"
        />
        <div
          class="MuiFormGroup-root makeStyles-headerForm MuiFormGroup-row"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-panButton"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-panButton"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <div
            aria-expanded="false"
            class="MuiAutocomplete-root"
            data-testid="autocomplete"
            role="combobox"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-headerRefName MuiFormControl-fullWidth"
              style="margin: 7px; min-width: 175px;"
            >
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                style="padding: 0px; height: 32px; background: rgba(255, 255, 255, 0.8);"
              >
                <input
                  aria-autocomplete="list"
                  aria-invalid="false"
                  autocapitalize="none"
                  autocomplete="off"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="refNameAutocomplete-lgv"
                  placeholder="Search for location"
                  spellcheck="false"
                  type="text"
                  value="ctgA:1..100;ctgB:1,001..1,698"
                />
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  style="margin-right: 7px;"
                  title="Search for features or navigate to a location using syntax \\"chr1:1-100\\" or \\"chr1:1..100\\""
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAutocomplete-endAdornment"
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <p
          class="MuiTypography-root makeStyles-bp MuiTypography-body2 MuiTypography-colorTextSecondary"
        >
          798 bp
        </p>
        <div
          class="makeStyles-container"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            data-testid="zoom_out"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14zM7 9h5v1H7z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <span
            class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider"
          >
            <span
              class="MuiSlider-rail"
            />
            <span
              class="MuiSlider-track"
              style="left: 0%; width: 9.774680693120512%;"
            />
            <input
              type="hidden"
              value="0"
            />
            <span
              aria-orientation="horizontal"
              aria-valuemax="564.3856189774724"
              aria-valuemin="-61.143471208234715"
              aria-valuenow="0"
              class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
              data-index="0"
              role="slider"
              style="left: 9.774680693120512%;"
              tabindex="0"
            />
          </span>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            data-testid="zoom_in"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                />
                <path
                  d="M12 10h-2v2H9v-2H7V9h2V7h1v2h2v1z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-spacer"
        />
      </div>
    </div>
  </div>
  <div
    class="makeStyles-tracksContainer"
    role="presentation"
  >
    <div
      class="makeStyles-verticalGuidesZoomContainer"
    >
      <div
        class="makeStyles-verticalGuidesContainer"
        style="left: -1024px; width: 3150px;"
      >
        <div
          class="makeStyles-boundaryPaddingBlock"
          style="width: 1024px;"
        />
        <div
          class="makeStyles-contentBlock"
          style="width: 100px;"
        >
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: -1px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 19px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 39px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 59px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 79px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 99px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 119px;"
          />
        </div>
        <div
          class="makeStyles-interRegionPaddingBlock"
          style="width: 2px;"
        />
        <div
          class="makeStyles-contentBlock"
          style="width: 1000px;"
        >
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: -1px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 19px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 39px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 59px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 79px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 99px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 119px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 139px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 159px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 179px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 199px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 219px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 239px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 259px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 279px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 299px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 319px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 339px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 359px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 379px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 399px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 419px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 439px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 459px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 479px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 499px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 519px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 539px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 559px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 579px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 599px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 619px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 639px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 659px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 679px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 699px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 719px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 739px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 759px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 779px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 799px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 819px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 839px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 859px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 879px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 899px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 919px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 939px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 959px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 979px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 999px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 1019px;"
          />
        </div>
        <div
          class="makeStyles-boundaryPaddingBlock"
          style="width: 1024px;"
        />
      </div>
    </div>
    <div
      class="makeStyles-rubberBandControl"
      data-testid="rubberBand_controls"
      role="presentation"
    >
      <div
        class="MuiPaper-root makeStyles-scaleBarContainer MuiPaper-outlined MuiPaper-rounded"
        data-resizer="true"
        style="height: 17px; box-sizing: border-box;"
      >
        <div
          class="makeStyles-scaleBarZoomContainer"
        >
          <div
            class="makeStyles-scaleBar"
            style="left: -1025px; width: 3150px; height: 17px; box-sizing: border-box;"
          >
            <div
              class="makeStyles-boundaryPaddingBlock"
              style="background: none; width: 1024px;"
            />
            <div
              class="makeStyles-contentBlock"
              style="width: 100px;"
            >
              <div
                class="makeStyles-tick"
                style="left: -1px;"
              >
                <p
                  class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
                >
                  0
                </p>
              </div>
            </div>
            <div
              class="makeStyles-interRegionPaddingBlock"
              style="background: none; width: 2px;"
            />
            <div
              class="makeStyles-contentBlock"
              style="width: 1000px;"
            >
              <div
                class="makeStyles-tick"
                style="left: -1px;"
              >
                <p
                  class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
                >
                  1,000
                </p>
              </div>
              <div
                class="makeStyles-tick"
                style="left: 199px;"
              >
                <p
                  class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
                >
                  1,200
                </p>
              </div>
              <div
                class="makeStyles-tick"
                style="left: 399px;"
              >
                <p
                  class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
                >
                  1,400
                </p>
              </div>
              <div
                class="makeStyles-tick"
                style="left: 599px;"
              >
                <p
                  class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
                >
                  1,600
                </p>
              </div>
              <div
                class="makeStyles-tick"
                style="left: 799px;"
              >
                <p
                  class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
                >
                  1,800
                </p>
              </div>
              <div
                class="makeStyles-tick"
                style="left: 999px;"
              >
                <p
                  class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
                >
                  2,000
                </p>
              </div>
            </div>
            <div
              class="makeStyles-boundaryPaddingBlock"
              style="background: none; width: 1024px;"
            />
          </div>
        </div>
        <p
          class="MuiTypography-root makeStyles-refLabel MuiTypography-body1"
          data-testid="refLabel-ctgA"
          style="left: -1px; padding-left: 1px;"
        >
          ctgA
        </p>
        <p
          class="MuiTypography-root makeStyles-refLabel MuiTypography-body1"
          data-testid="refLabel-ctgB"
          style="left: 101px; padding-left: 1px;"
        >
          ctgB
        </p>
      </div>
    </div>
    <div
      class="makeStyles-spacer"
    />
    <div
      class="makeStyles-root"
    >
      <div
        class="MuiPaper-root makeStyles-trackLabel makeStyles-trackLabelOverlap makeStyles-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <span
          class="makeStyles-dragHandle"
          data-testid="dragHandle-lgv-testConfig"
          draggable="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-dragHandleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          title="close this track"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
        >
          Foo Track
        </span>
        <button
          aria-controls="simple-menu"
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary MuiIconButton-disabled MuiButtonBase-disabled"
          data-testid="track_menu_icon"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="MuiPaper-root makeStyles-trackRenderingContainer MuiPaper-outlined MuiPaper-rounded"
        data-testid="trackRenderingContainer-lgv-testConfig"
        role="presentation"
        style="height: 100px;"
      >
        <div
          class="makeStyles-renderingComponentContainer"
          style="transform: scaleX(1);"
        >
          <div
            class="makeStyles-display"
            data-testid="display-testConfig-LinearBareDisplay"
            role="presentation"
          >
            <div
              class="makeStyles-linearBlocks"
              data-testid="Blockset"
              style="left: -1024px;"
            >
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 1024px;"
              />
              <div
                class="makeStyles-contentBlock"
                style="width: 100px;"
              >
                <div
                  style="position: relative;"
                >
                  <svg
                    class="SvgFeatureRendering"
                    height="0px"
                    style="display: block;"
                    width="100px"
                  />
                </div>
              </div>
              <div
                class="makeStyles-interRegionPaddingBlock"
                style="background: none; width: 2px;"
              />
              <div
                class="makeStyles-contentBlock"
                style="width: 1000px;"
              >
                <div
                  style="position: relative;"
                >
                  <svg
                    class="SvgFeatureRendering"
                    height="0px"
                    style="display: block;"
                    width="1000px"
                  />
                </div>
              </div>
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 1024px;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-overlay"
        style="height: 100px;"
      />
      <div
        class="makeStyles-horizontalHandle makeStyles-resizeHandle"
        data-resizer="true"
        role="presentation"
      />
    </div>
    <div
      class="makeStyles-root"
    >
      <div
        class="MuiPaper-root makeStyles-trackLabel makeStyles-trackLabelOverlap makeStyles-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <span
          class="makeStyles-dragHandle"
          data-testid="dragHandle-lgv-testConfig2"
          draggable="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-dragHandleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          title="close this track"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
        >
          Bar Track
        </span>
        <button
          aria-controls="simple-menu"
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary MuiIconButton-disabled MuiButtonBase-disabled"
          data-testid="track_menu_icon"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="MuiPaper-root makeStyles-trackRenderingContainer MuiPaper-outlined MuiPaper-rounded"
        data-testid="trackRenderingContainer-lgv-testConfig2"
        role="presentation"
        style="height: 100px;"
      >
        <div
          class="makeStyles-renderingComponentContainer"
          style="transform: scaleX(1);"
        >
          <div
            class="makeStyles-display"
            data-testid="display-testConfig2-LinearBareDisplay"
            role="presentation"
          >
            <div
              class="makeStyles-linearBlocks"
              data-testid="Blockset"
              style="left: -1024px;"
            >
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 1024px;"
              />
              <div
                class="makeStyles-contentBlock"
                style="width: 100px;"
              >
                <div
                  style="position: relative;"
                >
                  <svg
                    class="SvgFeatureRendering"
                    height="0px"
                    style="display: block;"
                    width="100px"
                  />
                </div>
              </div>
              <div
                class="makeStyles-interRegionPaddingBlock"
                style="background: none; width: 2px;"
              />
              <div
                class="makeStyles-contentBlock"
                style="width: 1000px;"
              >
                <div
                  style="position: relative;"
                >
                  <svg
                    class="SvgFeatureRendering"
                    height="0px"
                    style="display: block;"
                    width="1000px"
                  />
                </div>
              </div>
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 1024px;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-overlay"
        style="height: 100px;"
      />
      <div
        class="makeStyles-horizontalHandle makeStyles-resizeHandle"
        data-resizer="true"
        role="presentation"
      />
    </div>
  </div>
</div>
`;
